--- a/src/main/webapp/transaccion/transaccionUnitariaForm.xhtml
+++ b/src/main/webapp/transaccion/transaccionUnitariaForm.xhtml
@@ -61,22 +61,69 @@
                                                         class="text-danger">*</span>
                                                 </label>
                                                 <div class="col-lg-6">
-                                                    <h:selectOneMenu value="#{transaccionUnitariaMB.dto.idPro}" id="val-idCliente" styleClass="form-control">
-                                                        <f:selectItems var="cat" itemLabel="#{cat.nombreProducto}" itemValue="#{cat.idProducto}" value="#{transaccionUnitariaMB.listProducto}"
+                                                    <h:selectOneMenu valueChangeListener="#{transaccionMB.actualizaValor}" value="#{transaccionMB.uniDto.idPro}" id="val-idCliente" styleClass="form-control">
+                                                        <f:selectItems var="cat" itemLabel="#{cat.nombreProducto}" itemValue="#{cat.idProducto}" value="#{transaccionMB.uniListProducto}"
                                                         />
+                                                        <f:ajax process="@this" render="val-peso val-precioUni val-monto val-descuento" />
                                                     </h:selectOneMenu>
                                                 </div>
                                             </div>
 
 
-
                                             <div class="form-group row">
-                                                <label class="col-lg-4 col-form-label" for="val-name">Total <span
+                                                <label class="col-lg-4 col-form-label" for="val-cantidad">Cantidad <span
                                                         class="text-danger">*</span>
                                                 </label>
                                                 <div class="col-lg-6">
-                                                    <h:inputText disabled="true" value="#{cat.pesoProducto}"  styleClass="form-control" id="val-name"
+                                                    <h:inputText valueChangeListener="#{transaccionMB.actualizaValorCantidad}" value="#{transaccionMB.uniDto.cantidad}"  styleClass="form-control" id="val-cantidad"
+                                                                 name="val-name" p:placeholder="Escriba la cantidad.."/>
+                                                    <f:ajax event="keyup" render="val-peso val-precioUni val-monto val-descuento" />
+                                                    <h:outputText value="#{cat.nombreProducto}"/>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row">
+                                                <label class="col-lg-4 col-form-label" for="val-precioUni">Peso <span
+                                                        class="text-danger">*</span>
+                                                </label>
+                                                <div class="col-lg-6">
+                                                    <h:inputText disabled="true" value="#{transaccionMB.uniDto.peso}"  styleClass="form-control" id="val-peso"
+                                                                 name="val-name" p:placeholder="Escriba la peso.."/>
+                                                    <h:outputText value="#{cat.nombreProducto}"/>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row">
+                                                <label class="col-lg-4 col-form-label" for="val-precioUni">Precio Unitario <span
+                                                        class="text-danger">*</span>
+                                                </label>
+                                                <div class="col-lg-6">
+                                                    <h:inputText disabled="true" value="#{transaccionMB.uniDto.precioUnitario}"  styleClass="form-control" id="val-precioUni"
+                                                                 name="val-name" p:placeholder="Escriba la cantidad.."/>
+                                                    <h:outputText value="#{cat.nombreProducto}"/>
+                                                </div>
+                                            </div>
+
+
+                                            <div class="form-group row">
+                                                <label class="col-lg-4 col-form-label" for="val-monto">Monto <span
+                                                        class="text-danger">*</span>
+                                                </label>
+                                                <div class="col-lg-6">
+                                                    <h:inputText disabled="true" value="#{transaccionMB.uniDto.monto}"  styleClass="form-control" id="val-monto"
                                                                  name="val-name" p:placeholder="Escriba el nombre.."/>
+                                                    <h:outputText value="#{cat.nombreProducto}"/>
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row">
+                                                <label class="col-lg-4 col-form-label" for="val-descuento">Descuento <span
+                                                        class="text-danger">*</span>
+                                                </label>
+                                                <div class="col-lg-6">
+                                                    <h:inputText disabled="true" value="#{transaccionMB.uniDto.descuento}"  styleClass="form-control" id="val-descuento"
+                                                                 name="val-name" p:placeholder="Escriba el nombre.."/>
+                                                    <h:outputText value="#{cat.nombreProducto}"/>
                                                 </div>
                                             </div>
 
@@ -85,14 +132,13 @@
 
                                             <div class="form-group row text-center">
                                                 <div class="col-lg-12 ml-auto text-center">
-                                                    <h:commandLink rendered="#{transaccionMB.modoCrear}" action="#{transaccionMB.add()}" class="btn btn-primary"> <f:param name="idUser" value="#{sessionScope.idusu}"/>Crear Transaccion</h:commandLink>
-                                                    <h:commandLink rendered="#{transaccionMB.modoActualizar}" action="#{transaccionMB.update()}" class="btn btn-primary">Actualizar Transaccion</h:commandLink>
+                                                    <h:commandLink rendered="#{transaccionMB.modoCrear}" action="#{transaccionMB.addUnitFake()}" class="btn btn-primary"> Agregar Producto</h:commandLink>
+
                                                 </div>
                                             </div>
                                         </div>
                                     </h:form>
                                 </f:view>
-
                             </div>
                         </div>
                     </div>
