--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,7 +14,7 @@
         <!-- Custom Stylesheet -->
         <ui:include src="shared/resources.xhtml"></ui:include>
     </h:head>
-    <h:body>
+    <h:body styleClass="back-ground">
 
         <ui:include src="shared/loading.xhtml"></ui:include>
 
@@ -34,14 +34,6 @@
             ***********************************-->
             <div class="content-body">
 
-                <div class="row page-titles mx-0">
-                    <div class="col p-md-0">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="javascript:void(0)">Dashboard</a></li>
-                            <li class="breadcrumb-item active"><a href="javascript:void(0)">Home</a></li>
-                        </ol>
-                    </div>
-                </div>
                 <!-- row -->
 
                 <div class="container-fluid">
