--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -72,7 +72,7 @@
         <script>
 
             //window.location.replace("/faces/index.xhtml");
-            window.location.replace("/jewelryStore/faces/index.xhtml");
+            window.location.replace("/faces/index.xhtml");
 
         </script>
     </ui:fragment>
